made j18 args a static variable